✨️#13: 카테고리 조회 로직 개선
Copilot 제안 중 반드시 반영: normalize 이후 빈 문자열 가드.

반영하지 않음: directChildren을 마지막 세그먼트로 바꾸라는 제안(규칙 2 위배), findByName 다중 결과 가정, 루트 쿼리 반전 주장.

선택적 개선(추천): 변수/필드 명칭 명확화(firstChildren/lastChildren), 직계 검증 쿼리 추가.